
    Now, as part of the removal of a package and unless the option
    "::Delete-Unused" is set to true (defaults to false); aptitude pro-actively
    marks for removal the dependencies of the package marked as automatic and
    not used by other packages; and find_not_orphaned() was modified to only
    have into account installed packages or to-be-installed packages to prevent
    removals.

- User visible changes:

  * Make boundaries of sessions in the log file more clear (Closes: #269275)

  * [curses] Avoid marking as auto/non-auto if already set (Closes: #265013)

  * [curses] Print message when starting to perform actions (Closes: #323371)

- Internal changes:

  * temp.cc: simplify code and messages and reduce the use of boost libs

  * configure.ac: Remove checks for boost/scoped_array.hpp and boost/random.hpp,
    not used anymore -- a few seconds less per compilation

  * In file pkg_ver_item.cc, function pkg_ver_columnizer::setup_column(), the
    switch/case handling for longstate was missing the options added in 2007 for
    APT_HAS_TRIGGERS, present for stageflag case and both cases in
    pkg_columnizer::setup_column() of pkg_columnizer.cc.

    (In other words, it was missing in 1 of these 4 places where it is
    necessary).

  * Disable obsolete checks in configure.ac and preprocessor checks in code for
    APT_HAS_TRIGGERS, APT_HAS_HOMEPAGE and HAVE_DDTP.

    The support for these functionalities has been present in all involved tools
    since 2007-2008 or earlier, so it is safe to disable the checks and the
    dead code.

  * Add functions to check if packages are installed, automatically installed,
    if they are virtual, and others.  They can be used later to make other code
    more consistent, clear and clean.

  * Remove sigc++ include from apt_config_widgets.h (fails to build with newer
    versions)

- Documentation:

  * Guide/User's Manual:

    * Document Brown colour for downgraded packages in UI (feature implemented