@@ -90,6 +90,8 @@ Version 0.7.3 UNRELEASED
     have into account installed packages or to-be-installed packages to prevent
     removals.
 
+  * Honour ::Purge-Unused when removing packages (Closes: #724034)
+
 - User visible changes:
 
   * Make boundaries of sessions in the log file more clear (Closes: #269275)
